Added model user create account

--- a/app/views/transaction_mailer/new_transaction_email.html.erb
+++ b/app/views/transaction_mailer/new_transaction_email.html.erb
@@ -9,7 +9,7 @@
     Detalles<br>
     --------------------------</p>
     <p>Email: <%= @user.email %> </p>
-    <p>Account ID: <%= @user.account_id %></p>
+    <p>Account ID: <%= @user.account.id %></p>
     <p>Moneda: <%= @coin.tipo %></p>
     <p>Cantidad: <%= @transaction.cantidad %></p>
 
