--- a/app/views/transaction_mailer/new_transaction_email.text.erb
+++ b/app/views/transaction_mailer/new_transaction_email.text.erb
@@ -4,6 +4,6 @@ Has realizado una transacción!
 Detalles:
 --------------------------
 Email: <%= @user.email %>
-Account ID: <%= @user.account_id %>
+Account ID: <%= @user.account.id %>
 Moneda: <%= @coin.tipo %>
 Cantidad: <%= @transaction.cantidad %>
