:books: Edited Api Docs

--- a/app/views/documentation/index.html.erb
+++ b/app/views/documentation/index.html.erb
@@ -68,8 +68,7 @@ JSON POST BODY
 {
     "user": {
         "email":"user@domain.cl",
-        "password":"password",
-        "password_confirmation": "password"
+        "password":"password"
     }
 }
         </code></pre>
