Add bank token to regitrattion doc

--- a/app/views/documentation/index.html.erb
+++ b/app/views/documentation/index.html.erb
@@ -68,7 +68,8 @@ JSON POST BODY
 {
     "user": {
         "email":"user@domain.cl",
-        "password":"password"
+        "password":"password",
+        "bank_token":"bank token"
     }
 }
         </code></pre>
